moved pokemon routes and created home link in layout

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/css/pokestyle.css">
   </head>
   <body>
+    <h1> <a href="/">Pokemon</a></h1>
     <%= yield %>
   </body>
 </html>
