updated views and styles

--- a/public/css/pokestyle.css
+++ b/public/css/pokestyle.css
@@ -39,6 +39,13 @@ a:hover {
   justify-content: center;
 }
 
+form {
+  display: flex;
+  flex-direction: column;
+  /*justify-content: space-between;*/
+  /*align-items: flex-start;*/
+}
+
 .pokemon{
   min-width: 375px;
   background-color: rgb(255, 255, 255);
