--- a/views/trainers/index.erb
+++ b/views/trainers/index.erb
@@ -3,4 +3,4 @@
 <a href="/trainers/<%= trainer.id %>"><p><%= trainer.name %></p></a>
 <% end %>
 
-<a href="/trainer/new">Create New Trainer</a>
+<h3><a href="/trainer/new">Create New Trainer</a></h3>
