--- a/views/pokemon/edit.erb
+++ b/views/pokemon/edit.erb
@@ -1,18 +1,34 @@
-<h2>Edit Pokemon</h2>
+<div class="containareon">
+  <h2>Edit Pokemon</h2>
 
-<form action="/pokemon/<%= @poke.id %>" method="post">
-  <input type="hidden" name="_method" value="put">
-  <label>Name: </label>
-  <input type="text" name="poke[name]" value="<%= @poke.name %>">
+  <form id="update_pokemon" action="/pokemon/<%= @poke.id %>" method="post">
+    <input type="hidden" name="_method" value="put">
 
-  <label>Type: </label>
-  <input type="text" name="poke[poke_type]" value="<%= @poke.poke_type %>">
+    <div>
+      <label>Name: </label>
+      <input type="text" name="poke[name]" value="<%= @poke.name %>">
+    </div>
 
-  <label>CP: </label>
-  <input type="text" name="poke[cp]" value="<%= @poke.cp %>">
+    <div>
+      <label>Type: </label>
+      <input type="text" name="poke[poke_type]" value="<%= @poke.poke_type %>">
+    <div>
 
-  <label>Image URL: </label>
-  <input type="text" name="poke[img_url]" value="<%= @poke.img_url %>">
+    <div>
+      <label>CP: </label>
+      <input type="text" name="poke[cp]" value="<%= @poke.cp %>">
+    </div>
 
-  <input type="submit" value="Update">
-</form>
+    <div>
+      <label>Image URL: </label>
+      <input type="text" name="poke[img_url]" value="<%= @poke.img_url %>">
+    <div>
+
+    <h2><a
+        href="javascript:{}"
+        onclick="document.getElementById('update_pokemon').submit();"
+        type="submit">(Update)
+    </a></h2>
+    <a href="/pokemon/<%= @poke.id %>">(Go Back)</a>
+  </form>
+</div>
