--- a/views/pokemon/index.erb
+++ b/views/pokemon/index.erb
@@ -3,4 +3,4 @@
 <a href="/pokemon/<%= pokemon.id %>"><p><%= pokemon.name %></p></a>
 <% end %>
 
-<a href="/pokemon/new">Create New Pokemon</a>
+<h3><a href="/pokemon/new">Create New Pokemon</a></h3>
