updated styles and views

--- a/public/css/pokestyle.css
+++ b/public/css/pokestyle.css
@@ -39,11 +39,13 @@ a:hover {
   justify-content: center;
 }
 
+.containareon {
+  height: 100vh;
+}
+
 form {
   display: flex;
   flex-direction: column;
-  /*justify-content: space-between;*/
-  /*align-items: flex-start;*/
 }
 
 .pokemon{
