--- a/views/index.erb
+++ b/views/index.erb
@@ -1,2 +1,4 @@
-<h2><a href="/trainers">All Trainers</a></h2>
-<h2><a href="/pokemon">All Pokemon</a></h2>
+<div class="containareon">
+  <h2><a href="/trainers">All Trainers</a></h2>
+  <h2><a href="/pokemon">All Pokemon</a></h2>
+</div>
